[tool.poetry]
name = "goit-pyweb-hw-05"
version = "0.1.0"
description = ""
authors = ["SvetlanaRomaniuk111 <gatskosv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.11.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
